# nimcrab-rt

./: .gitignore  Cargo.toml  README.md  build.rs  builder.py  redcrab.nimble
src/: antidetect.nim  antidetect.rs  c2.nim  c2.rs  defs.nim  defs.rs  dpapi.nim  dpapi.rs  etw_patch.nim  etw_patch.rs  filetransfer.nim  filetransfer.rs  guardian.nim  guardian.rs  hashes.nim  hashes.rs  hollow.nim  hollow.rs  indirect_syscall.nim  indirect_syscall.rs  keylog.nim  keylog.rs  lateral.nim  loader.nim  loader.rs  main.rs  mic.nim  mic.rs  nim.cfg  pe_obfuscate.nim  pe_obfuscate.rs  persist.nim  persist.rs  post_shutdown.nim  ppldump.nim  ppldump.rs  redcrab.nim  resurrect.nim  resurrect.rs  sac_bypass.nim  (+26 more)
tools/hashgen/: Cargo.toml
tools/hashgen/src/: main.rs
