[package]
name        = "redcrab-rt"
version     = "0.1.0"
edition     = "2021"
description = "Windows x64 red team implant framework — authorized engagement tooling"

[[bin]]
name = "redcrab"
path = "src/main.rs"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false

[dependencies]
# zero external deps — everything resolved via PEB / direct syscall
